# pymodaq_plugins_urashg

./: .gitignore  CI_FIXES_COMPLETE.md  CI_SUCCESS_SUMMARY.md  CLAUDE.md  CRITICAL_ISSUES_RESOLVED.md  HARDWARE_INTEGRATION_SUCCESS_REPORT.md  LICENSE  MAITAI_CONNECTION_FIX.md  MOCK_MODE_TEST_RESULTS.md  PLAN.md  PYMODAQ_5X_COMPATIBILITY_FIX.md  PYMODAQ_GUI_SETUP.md  PYMODAQ_STANDARDS_FIXES.md  PYTEST_MIGRATION.md  README.md  README.rst  SHUTTER_CONTROL_FIX.md  SOLUTION_INSTRUCTIONS.md  TEST_ANALYSIS_REPORT.md  THREADING_SAFETY_GUIDELINES.md  TITLE_ATTRIBUTE_FIX.md  UV_ENVIRONMENT_SETUP.md  UV_IMPLEMENTATION_SUMMARY.md  UV_QUICK_START.md  compose.yaml  constraints.txt  create_manual_plugins.py  dashboard_x11_fixed.py  dashboard_x11_wrapper.sh  example_maitai_connection.py  hatch_build.py  identify_all_devices.py  launch_daq_move_direct.py  launch_pymodaq_gui.sh  launch_pymodaq_vnc.sh  launch_urashg_extension.py  launch_urashg_minimal.py  launch_urashg_mock_debug.py  launch_urashg_plugin_test.py  launch_urashg_simple.py  (+34 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml
.serena/: project.yml
.serena/memories/: agent_fleet_coordination_final_report.md  calibration_methods_analysis.md  ci_compliance_fixes_completed.md  code_style_conventions.md  codebase_structure.md  comprehensive_development_plan_pymodaq.md  comprehensive_test_suite_implementation.md  correct_dataactuator_usage_patterns.md  correct_move_plugin_implementation_patterns.md  correct_testing_methodology_urashg_plugins.md  correct_urashg_terminology.md  critical_lesson_root_cause_vs_symptoms.md  development_workflow_2025.md  eom_power_control_analysis.md  final_ci_compliance_resolution.md  final_project_status_complete.md  hardware_control_sequences_final.md  hardware_device_mapping_current.md  hardware_device_mapping_final.md  hardware_device_scanner_results.md  hardware_port_mapping_discovered.md  hardware_testing_verification_complete.md  newport_power_meter_integration_complete.md  pdshg_experiment_analysis.md  phase2_complete_implementation_status.md  phase2_complete_production_ready_status.md  primebsi_camera_pyvcam_integration.md  project_overview.md  pymodaq_5_migration_complete.md  pymodaq_5_migration_fixes.md  pymodaq_experiment_architecture_implementation.md  pymodaq_extension_architecture.md  pymodaq_extensions_vs_plugins_analysis.md  pymodaq_official_architecture_patterns.md  pymodaq_plugin_discovery_solution.md  pymodaq_urashg_experiments_implementation_complete.md  pymodaq_v5_correct_patterns.md  pyvcam_compatibility_fix_final.md  suggested_commands.md  task_completion_checklist.md  (+8 more)
archive_temp_files/: COMPLETE_PYMODAQ_5X_FIXES.md  PYMODAQ_GUI_SETUP.md  PYMODAQ_UI_INTEGRATION_FIX.md  README_UI_FIXES.md  create_dashboard_correct.py  debug_x11_setup.py  fix_x11_pymodaq.sh  launch_daq_move_fixed.sh  launch_daq_move_robust.sh  launch_daq_move_ultimate.sh  launch_daq_move_vnc.sh  launch_gui_test.py  launch_pymodaq_no_opengl.py  launch_pymodaq_simple.py  run_all_tests.py  run_dashboard_remote.sh  setup_test_environment.py  setup_vnc.sh  simple_plugin_test.py  start_pymodaq_vnc.sh  test_camera_plugin.py  test_complete_urashg_system.py  test_comprehensive_system.py  test_dashboard_startup.py  test_elliptec_plugin.py  test_esp300_hardware.py  test_esp300_plugin.py  test_maitai_plugin.py  test_manual_plugin_loading.py  test_newport_simple.py  test_plugin_initialization.py  test_preset_validation.py  test_pymodaq_plugins.py
docs/: FINAL_HARDWARE_TEST_RESULTS.md  MIGRATION_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  PYMODAQ_COMPLIANCE_FINAL_REPORT.md
docs/ai_docs/: gemini_analysis.md  repomix-output-PyMoDAQ-pymodaq_data.git.xml  repomix-output-PyMoDAQ-pymodaq_gui.git.xml  repomix-output-PyMoDAQ-pymodaq_plugins_template.git.xml  repomix-output-PyMoDAQ-pymodaq_utils.git.xml
docs/development_history/: CI_FIXES_SUMMARY.md  REAL_HARDWARE_TEST_REPORT.md
examples/: automated_rashg_scan.py
legacy_docs/: CRUSH.md  PROJECT_STATUS.md  PYMODAQ_5X_COMPLIANCE_FIXES.md
scripts/: identify_all_devices.py  run_all_tests.py  setup_test_environment.py
scripts/mock_modules/: __init__.py  mock_pyvcam.py  mock_serial.py
src/pymodaq_plugins_urashg/: __init__.py  urashg_plugins_config.toml  utils.py
test_results/: compliance_report.html
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  run_compliance_tests.py  setup_test_environment.py  test_basic.py  test_camera_plugin.py  test_device_manager_compliance.py  test_elliptec_plugin.py  test_extension_compliance.py  test_full_extension_suite.py  test_maitai_plugin.py  test_measurement_worker_compliance.py  test_newport_power_meter.py  test_plugin_compliance.py  test_plugin_integration.py  test_plugin_integration_compliance.py  test_primebsi_camera.py  test_pymodaq_compliance.py  test_pymodaq_integration.py
tests/development/: test_elliptec_experiment.py  test_experiment_validation.py  test_power_stabilization_integration.py  test_pyrpl_plugin_integration.py
tests/hardware/: test_camera_hardware.py  test_elliptec_controller.py  test_esp300_hardware.py  test_hardware_connectivity.py  test_maitai_controller.py  test_maitai_hardware.py  test_newport_controller.py  test_real_hardware.py
tests/integration/: test_daq_0Dviewer_Newport1830C_integrated.py  test_daq_2dviewer_primebsi.py  test_daq_move_esp300.py  test_daq_move_maitai.py  test_esp300_threading_fix.py  test_hardware_controller_threading.py  test_threading_safety_comprehensive.py  test_urashg_extension_integrated.py  threading_safety_verified.md
tests/mock_modules/: mock_devices.py  mock_pymodaq.py  mock_pyvcam.py  mock_serial.py
tests/unit/: test_camera_wrapper.py  test_daq_0Dviewer_Newport1830C.py  test_daq_2Dviewer_PrimeBSI.py  test_daq_2Dviewer_PrimeBSI_comprehensive.py  test_daq_2Dviewer_PrimeBSI_enhanced.py  test_daq_move_ESP300.py  test_daq_move_ESP300_comprehensive.py  test_daq_move_Elliptec.py  test_daq_move_Elliptec_comprehensive.py  test_daq_move_MaiTai.py  test_esp300_controller.py  test_hardware_abstraction.py  (+10 more)
(+72 files in other folders)
