[features] # defines the plugin features contained into this plugin
instruments = true  # true if plugin contains instrument classes (else false, notice the lowercase for toml files)
extensions = false  # true if plugins contains dashboard extensions
models = false      # true if plugins contains pid models
h5exporters = false # true if plugin contains custom h5 file exporters
scanners = false    # true if plugin contains custom scan layout (daq_scan extensions)

[urls]
package-url = 'https://github.com/TheFermiSea/pymodaq_plugins_urashg'

[project]
name = "pymodaq_plugins_urashg"
description = 'PyMoDAQ plugin package for URASHG (micro Rotational Anisotropy Second Harmonic Generation) microscopy'
dependencies = [
    "pymodaq>=5.0.0",
    "pyserial>=3.4",
    "elliptec>=0.0.6",
    "numpy>=1.20.0",
]

authors = [{ name = "TheFermiSea", email = "squires.b@gmail.com" }]
maintainers = [{ name = "TheFermiSea", email = "squires.b@gmail.com" }]

# nottodo: leave everything below as is!

dynamic = ["version", "urls", "entry-points"]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[build-system]
requires = ["hatchling>=1.9.0", "hatch-vcs", "toml", "pymodaq_utils>=0.0.6"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.version]
source = "vcs"
